many changes, hopefully these are improvements - only time will tell